--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,12 +2,18 @@
         <html>
 <body>
 <link rel='stylesheet' href='/stylesheets/base.css' >
+<script type="text/javascript" src="/js/headerScript.js"></script>
 <div class="baseblock">
     <h1 class="name">My blog</h1>
     <nav>
         <a href="#">Главная</a>
         <a href="#">Посты</a>
-        <a href="#">Логин</a>
+        <% if (user) { %>
+        <a id="enterButton" href="">Выйти</a>
+        <form method="POST" id="postform" action="/logout"></form>
+        <% } else { %>
+        <a id="enterButton" href="/login">Войти</a>
+        <% } %>
     </nav>
     </div>
 </body>
