few css changes

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,6 +15,9 @@
         <% } %>
     </nav>
     </div>
+<div class="footer">
+    copyright 2016 Attemka
+</div>
 <script type="text/javascript" src="/js/headerScript.js"></script>
 </body>
 </html>
