--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1,4 +1,5 @@
 .baseblock {
+    z-index: 2;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -47,3 +48,15 @@
     pointer-events: none;
     opacity: 1;
 }
+
+.footer {
+    z-index: 2;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    background-color: #7d7f77;
+}
+
