--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,7 @@
 <div class="baseblock">
     <h1 class="name">My blog</h1>
     <nav>
-        <a href="#">Главная</a>
+        <a href="/">Главная</a>
         <a href="#">Посты</a>
         <% if (user) { %>
         <a id="enterButton" href="#">Выйти</a>
