--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,11 +12,11 @@
     <% } else { %>
   <div class="welcomeText">
       <h1 class="title1">Welcome to the test blog</h1><br>
+      Author: Attemka<br>
+      NodeJS + js<br>
+      Express for node<br>
+      Dav petuh<br>
 
-      <button class="welcomeBtn">Login</button>
-      or
-      <button class="welcomeBtn">Sign up</button><br>
-      <p>to begin</p> <br>
   </div>
     <% } %>
 
