--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
     <input class="formTextInput" name="password" placeholder="Password"
            type="password">
     <input type="submit" class="submitButton" value="Enter">
-</form>
-
+</form> 
+no acc? <a href="/signup">sign up.</a>
 </body>
 </html>
