--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,41 +1,17 @@
 body {
-
+    margin-top: 3%;
   padding: 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-
-
-}
-.background-image{
-    background-image: url("https://www.brainscape.com/blog/wp-content/uploads/2015/01/hires.jpg");
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    display: block;
-    width: 100%;
-    height: 100%;
-
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(5px);
-    -webkit-filter: opacity(0.8);
+background-color: #abb1b9;
 
 }
+
 .welcomeText {
     padding: 0px;
-    font-family: Calibri;
+    font-family:Mallige;
     z-index: 2;
   height: 400px;
   width: 700px;
-  border: #29468b 3px solid;
-  background-color: #7dc9ff;
-  border-radius: 10px;
-  position: absolute;
-  left: 650px;
-  top: 250px;
-  text-align: center;
   vertical-align: top;
   font-size: 25px;
 }
