--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
     margin-top: 3%;
   padding: 10px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px Mallige, Helvetica, Arial, sans-serif;
 background-color: #abb1b9;
 
 }
