--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,2 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>you've got an error</title>
+<link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+<body>
+<% include header.ejs%>
+<div class="errorMessage">
 <p>sorry, error slovil :( </p>
 <p><%=error.message%></p>
+    </div>
+</body>
