--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,9 @@ background-color: #abb1b9;
 
 
 .welcomeBtn{
-    margin: 20px;
+    position: inherit;
+    margin-left: 25%;
+    margin-top: 15px;
     background-color: #4CAF50;
     border: none;
     color: white;
@@ -34,4 +36,29 @@ background-color: #abb1b9;
 
 a {
   color: #00B7FF;
+}
+.loginRegBlock {
+
+position: absolute;
+    left: 35%;
+    padding: 15px;
+    width: 400px;
+    height: 150px;
+
+}
+
+.formTextInput {
+    align-content: center;
+    width: 300px;
+    height: 44px;
+    border-radius: 5px;
+    margin: 5px;
+    font-family: Mallige ;
+    font-size: 18px;
+}
+
+.errorLabel {
+    font-family: Mallige;
+    font-size: 16px;
+    margin-left: 5px;
 }
