--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,8 @@
 <div class="background-image"></div>
     <% include header.ejs %>
     <% if (user) { %>
-    <p>zdarova, <%=user.get('username')%></p>
+    <p>zdarova, <%=user.get('username')%></p><br>
+    <p>user id: <%=user.get('id')%></p>
     <% } else { %>
   <div class="welcomeText">
       <h1 class="title1">Welcome to the test blog</h1><br>
